--- a/client/src/CodeInput.css
+++ b/client/src/CodeInput.css
@@ -1,3 +1,8 @@
 .inText{
     width: 97%;
+    background: #303756;
+    border: 1px solid #979db4;
+    outline: none;
+    radius: 5px;
+    color: #979db4;
 }
